build/log/idf_py_stderr_output_24868
/home/ufi/programming/The-One-Ring/main/TheOneRing.c: In function 'app_main':
/home/ufi/programming/The-One-Ring/main/TheOneRing.c:57:17: error: expected ',' or ';' before 'LED_COUNT'
   57 |   for(int i = 0 LED_COUNT/2 +1; i < LED_COUNT; i++){
      |                 ^~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/TheOneRing.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5719: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
